--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/hotwings.html">Hot Wings</a></li>
+    </ul>
 </body>
 </html>
