Added Cookies and Updated Index
deleted the unused image files

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/hotwings.html">Hot Wings</a></li>
+        <li><a href="recipes/cookies.html">Cookies</a></li>
     </ul>
 </body>
 </html>
